# TelegramBot01

./: .gitignore  .pylintrc  Anekdot.py  DbHelper.py  Dockerfile  Handler.py  Makefile  README.md  attachments.py  config.py  config_example.py  db_restore.sh  docker-compose.yml  draw.py  entrypoint.sh  env_example  main.py  main_controller.py  models.py  pyproject.toml  requerements.txt  requirements.txt  setup.cfg  stock.py
alembic/: env.py
alembic/versions/: 8eed101115a5_initial_migration.py
app/: main.py  settings.py
app/db/: db.py  engine.py  models.py
app/handlers/: AnekdotHandler.py  attachments.py  draw.py  stock.py  text_handler.py
app/repository/: anekdot.py  anekdot_user.py
db/: mysql_create.sql  sqlite_create.sql  telegram01.db
fonts/MSSansSerif/: COPYRIGHT.txt
tests/: conftest.py
tests/handlers/: test_anekdot_handler.py
tests/repository/: test_anekdot.py  test_anekdot_user.py
